Adesso il ristorante viene salvato con la sua latitudine e longitudine
